# pytest-clang-tidy

./: README.md  pyproject.toml
src/pytest_clang_tidy/: plugin.py
tests/: test_plugin.py
